:sparkles: Complete deploy source to dst host and restart app

--- a/etc/supervisor-example.conf
+++ b/etc/supervisor-example.conf
@@ -2,14 +2,14 @@
 programs=canyon-catalog-updater
 
 [program:canyon-catalog-updater]
-directory=/home/%USERNAME%/current
+directory=/home/%USERNAME%
 command=/home/%USERNAME%/venv/bin/python -m app.catalog_updater
 user=%USERNAME%
 stopsignal=INT
 autorestart=true
 autostart=true
 redirect_stderr=true
-stdout_logfile=/home/%USERNAME%/logs/supervisor.txt
+stdout_logfile=/home/%USERNAME%/logs/catalog_updater.txt
 stdout_logfile_maxbytes=1MB
 stdout_capture_maxbytes=1MB
 stdout_logfile_backups=10
