--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,28 +3,37 @@ name: deploy
 on:
   push:
     branches:
-      - deploy_with_supervisord
+      - master
 
 jobs:
   on-success:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.9
+      - name: checkout
+        uses: actions/checkout@v2
 
-    - name: Prepare dst host
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USERNAME }}
-        password: ${{ secrets.SSH_PASSWORD }}
-        port: 22
-        script: |
-          mkdir -p app
-          mkdir -p logs
-          test -d venv || python3.9 -m venv venv
+      - name: deploy
+        uses: cross-the-world/ssh-scp-ssh-pipelines@v1.1.4
+        env:
+          TARGET_DIR: /home/${{ secrets.SSH_USERNAME }}
+          VENV_BIN: venv/bin
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          user: ${{ secrets.SSH_USERNAME }}
+          pass: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          connect_timeout: 10s
+          first_ssh: |-
+            mkdir -p app
+            mkdir -p logs
+            test -d venv || python3.9 -m venv venv
 
-#          supervisorctl restart tinkoff
+          scp: |-
+            './app/*' => $TARGET_DIR/app/
+            ./poetry.lock => $TARGET_DIR
+            ./pyproject.toml => $TARGET_DIR
+
+          last_ssh: |-
+            $VENV_BIN/pip install -U poetry pip setuptools
+            $VENV_BIN/poetry install --no-dev
+            supervisorctl restart canyon:*
