--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
+httpx = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.950"
