--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.9"
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
 httpx = "^0.22.0"
+lxml = "^4.8.0"
+cssselect = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.950"
