--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pydantic = {extras = ["dotenv"], version = "^1.9.0"}
 httpx = "^0.22.0"
 lxml = "^4.8.0"
 cssselect = "^1.1.0"
+aioredis = {extras = ["hiredis"], version = "^2.0.1"}
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.950"
