--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mypy = "^0.950"
 wemake-python-styleguide = "^0.16.1"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
+pytest-asyncio = "^0.18.3"
 
 [tool.mypy]
 python_version = 3.9
