--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ python_version = 3.9
 disallow_untyped_defs = true
 ignore_missing_imports = true
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
