--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
