--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ cssselect = "^1.1.0"
 mypy = "^0.950"
 wemake-python-styleguide = "^0.16.1"
 pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
 
 [tool.mypy]
 python_version = 3.9
