--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ httpx = "^0.22.0"
 lxml = "^4.8.0"
 cssselect = "^1.1.0"
 aioredis = {extras = ["hiredis"], version = "^2.0.1"}
+aiogram = "^2.20"
+aiohttp = {extras = ["speedups"], version = "^3.8.1"}
+ujson = "^5.3.0"
+uvloop = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.950"
