--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,8 @@ jobs:
             ./pyproject.toml => $TARGET_DIR
 
           last_ssh: |-
-            $VENV_BIN/pip install -U poetry pip setuptools
+            $VENV_BIN/pip install --no-cache-dir poetry pip setuptools --upgrade
+            $VENV_BIN/poetry config virtualenvs.create false --local
             $VENV_BIN/poetry install --no-dev
+            $VENV_BIN/pip cache purge
             supervisorctl restart canyon:*
