--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,4 +37,5 @@ jobs:
 
     - name: Run tests
       run: |
+        echo 'bot_token=${{ secrets.TELEGRAM_BOT_TOKEN_TEST }}' > .env
         poetry run pytest -ra -v --cov=app
