--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,5 @@ jobs:
             $VENV_BIN/poetry config virtualenvs.create false --local
             $VENV_BIN/poetry install --no-dev
             $VENV_BIN/pip cache purge
+            echo 'bot_token=${{ secrets.TELEGRAM_BOT_TOKEN }}' > .env
             supervisorctl restart canyon:*
