--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ aiogram = "^2.20"
 aiohttp = {extras = ["speedups"], version = "^3.8.1"}
 ujson = "^5.3.0"
 uvloop = "^0.16.0"
+pytest-mock = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.950"
