:sparkles: Deploy bot app to server

--- a/etc/supervisor-example.conf
+++ b/etc/supervisor-example.conf
@@ -1,5 +1,5 @@
 [group:canyon]
-programs=canyon-catalog-updater
+programs=canyon-catalog-updater, canyon-bot
 
 [program:canyon-catalog-updater]
 directory=/home/%USERNAME%
@@ -10,6 +10,19 @@ autorestart=true
 autostart=true
 redirect_stderr=true
 stdout_logfile=/home/%USERNAME%/logs/catalog_updater.txt
+stdout_logfile_maxbytes=1MB
+stdout_capture_maxbytes=1MB
+stdout_logfile_backups=10
+
+[program:canyon-bot]
+directory=/home/%USERNAME%
+command=/home/%USERNAME%/venv/bin/python -m app.bot
+user=%USERNAME%
+stopsignal=INT
+autorestart=true
+autostart=true
+redirect_stderr=true
+stdout_logfile=/home/%USERNAME%/logs/catalog_bot.txt
 stdout_logfile_maxbytes=1MB
 stdout_capture_maxbytes=1MB
 stdout_logfile_backups=10
