preparings to subscription notification was started. list of new available bikes is ready

--- a/etc/supervisor-example.conf
+++ b/etc/supervisor-example.conf
@@ -1,5 +1,5 @@
 [group:canyon]
-programs=canyon-catalog-updater, canyon-bot
+programs=canyon-catalog-updater, canyon-bot, canyon-subscription-notifier
 
 [program:canyon-catalog-updater]
 directory=/home/%USERNAME%
@@ -23,6 +23,19 @@ autorestart=true
 autostart=true
 redirect_stderr=true
 stdout_logfile=/home/%USERNAME%/logs/catalog_bot.txt
+stdout_logfile_maxbytes=1MB
+stdout_capture_maxbytes=1MB
+stdout_logfile_backups=10
+
+[program:canyon-subscription-notifier]
+directory=/home/%USERNAME%
+command=/home/%USERNAME%/venv/bin/python -m app.subscription_notifier
+user=%USERNAME%
+stopsignal=INT
+autorestart=true
+autostart=true
+redirect_stderr=true
+stdout_logfile=/home/%USERNAME%/logs/catalog_subscription_notifier.txt
 stdout_logfile_maxbytes=1MB
 stdout_capture_maxbytes=1MB
 stdout_logfile_backups=10
