--- a/etc/supervisor-example.conf
+++ b/etc/supervisor-example.conf
@@ -16,7 +16,7 @@ stdout_logfile_backups=10
 
 [program:canyon-bot]
 directory=/home/%USERNAME%
-command=/home/%USERNAME%/venv/bin/python -m app.bot
+command=/home/%USERNAME%/venv/bin/python -m app.bot_runner
 user=%USERNAME%
 stopsignal=INT
 autorestart=true
