--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,9 +1,9 @@
-name: tests
+name: linters
 
 on: [push]
 
 jobs:
-  tests:
+  linters:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,12 +22,10 @@ jobs:
         poetry --version
         poetry install
 
-    - uses: shogo82148/actions-setup-redis@v1
-      with:
-        redis-version: 'latest'
-    - run: redis-cli ping
-
-    - name: Run tests
+    - name: Run MyPy
       run: |
-        echo 'bot_token=${{ secrets.TELEGRAM_BOT_TOKEN_TEST }}' > .env
-        poetry run pytest -ra -v --cov=app
+        poetry run mypy app/
+
+    - name: Run flake8
+      run: |
+        poetry run flake8 app/
