--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -U poetry setuptools
+        pip install -U pip poetry setuptools
         poetry --version
         poetry install
 
