--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,16 @@ authors = ["Your Name <you@example.com>"]
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
-httpx = "^0.22.0"
+httpx = "0.23.0"
 lxml = "^4.8.0"
 cssselect = "^1.1.0"
-aioredis = {extras = ["hiredis"], version = "^2.0.1"}
 aiogram = "^2.20"
 aiohttp = {extras = ["speedups"], version = "^3.8.1"}
 ujson = "^5.3.0"
-uvloop = "^0.16.0"
+uvloop = "^0.22.1"
+redis = "^7.0.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.950"
