--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ ujson = "^5.3.0"
 uvloop = "^0.22.1"
 redis = "^7.0.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 mypy = "^0.950"
 wemake-python-styleguide = "^0.16.1"
 pytest = "^7.1.2"
